--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -6,3 +6,5 @@
         </trust-anchors>
     </base-config>
 </network-security-config>
+
+<!-- Stackoverflow: https://stackoverflow.com/questions/51990158/android-p-networksecuritypolicy-iscleartexttrafficpermitted-false-when-network -->
