--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -6,18 +6,185 @@
     android:layout_height="match_parent"
     tools:context=".ui.today.TodayFragment">
 
-    <TextView
-        android:id="@+id/text_today"
-        android:layout_width="match_parent"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation_viewSunny"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@id/guideline"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.45"
+        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintHeight_percent="0.35"
+        app:layout_constraintHorizontal_bias="1"
+        app:lottie_rawRes="@raw/wsunny"
+        app:lottie_loop="true"
+        app:lottie_autoPlay="true" />
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation_viewPartly"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/guideline"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.45"
+        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintHeight_percent="0.35"
+        app:layout_constraintHorizontal_bias="1"
+        app:lottie_rawRes="@raw/wpartlycloudy"
+        app:lottie_loop="true"
+        app:lottie_autoPlay="true" />
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation_Cloudy"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/guideline"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.45"
+        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintHeight_percent="0.35"
+        app:layout_constraintHorizontal_bias="1"
+        app:lottie_rawRes="@raw/wcloudy"
+        app:lottie_loop="true"
+        app:lottie_autoPlay="true" />
 
+    <TextView
+        android:id="@+id/text_main"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginRight="40dp"
+        android:textSize="35dp"
+        tools:text="Clear"/>
+
+    <TextView
+        android:id="@+id/text_city"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="35dp"
+        tools:text="Budapest"/>
+
+    <TextView
+        android:id="@+id/text_country"
+        app:layout_constraintTop_toBottomOf="@+id/text_city"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="20dp"
+        android:textSize="25dp"
+        tools:text="Hungary"/>
+
+    <TextView
+        android:id="@+id/text_temperature"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="170dp"
+        android:textSize="45dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="20.0°C" />
+
+    <TextView
+        android:id="@+id/text_feelsLike"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        app:layout_constraintWidth_percent="0.5"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_temperature"
+        tools:text="Feels like: 30°C" />
+
+
+    <TextView
+        android:id="@+id/text_max"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        app:layout_constraintBottom_toTopOf="@+id/text_min"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginBottom="10dp"
+        android:textSize="20dp"
+        tools:text="Maximum: 30°C"/>
+    <TextView
+        android:id="@+id/text_min"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        app:layout_constraintBottom_toTopOf="@+id/text_sunrise"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginBottom="40dp"
+        android:textSize="20dp"
+        tools:text="Minimum: 10°C"/>
+
+    <TextView
+        android:id="@+id/text_sunrise"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        app:layout_constraintBottom_toTopOf="@+id/text_sunset"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginBottom="5dp"
+        android:textSize="15dp"
+        tools:text="Sunrise: 3 pm"/>
+    <TextView
+        android:id="@+id/text_sunset"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        app:layout_constraintBottom_toTopOf="@+id/text_windspeed"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginBottom="5dp"
+        android:textSize="15dp"
+        tools:text="Sunset: 2 am"/>
+
+    <TextView
+        android:id="@+id/text_windspeed"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        app:layout_constraintBottom_toTopOf="@+id/text_pressure"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginBottom="5dp"
+        android:textSize="15dp"
+        tools:text="Wind: 20km/h"/>
+
+    <TextView
+        android:id="@+id/text_pressure"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        app:layout_constraintBottom_toTopOf="@+id/text_humidity"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginBottom="5dp"
+        android:textSize="15dp"
+        tools:text="Pressure: 30pa"/>
+
+    <TextView
+        android:id="@+id/text_humidity"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginBottom="100dp"
+        android:textSize="15dp"
+        tools:text="Humidity: 30%"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
