--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -74,10 +74,10 @@
         android:id="@+id/text_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         app:layout_constraintBottom_toBottomOf="@id/mainGuide"
         app:layout_constraintLeft_toRightOf="@id/mainGuide"
-        android:textSize="50dp"
+        android:textSize="50sp"
         android:textColor="@color/white"
         android:fontFamily="sans-serif-light"
         tools:text="Clear" />
@@ -88,7 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="center_vertical"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:textColor="@color/white"
         android:fontFamily="sans-serif-light"
         app:layout_constraintEnd_toEndOf="parent"
@@ -102,7 +102,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:gravity="center_vertical"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:textColor="@color/white"
         android:fontFamily="sans-serif-light"
         app:layout_constraintEnd_toEndOf="parent"
@@ -115,13 +115,13 @@
         android:id="@+id/text_temperature"
         android:layout_width="234dp"
         android:layout_height="188dp"
-        android:layout_marginBottom="100dp"
         android:fontFamily="sans-serif-light"
         android:textColor="@color/white"
-        android:textSize="170dp"
+        android:textSize="170sp"
+        app:layout_constraintBottom_toTopOf="@id/detailsContainer"
         app:layout_constraintEnd_toStartOf="@+id/verticalGuide"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/detailsContainer"
+        app:layout_constraintTop_toBottomOf="@+id/text_date"
         tools:text="20°" />
 
 
@@ -184,7 +184,7 @@
             app:layout_constraintLeft_toRightOf="@id/details"
             app:layout_constraintBottom_toBottomOf="@+id/details"
             app:layout_constraintTop_toTopOf="@+id/details"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="1dp"
             android:background="#FFFFFF"
             android:layout_width="wrap_content" />
@@ -193,9 +193,9 @@
             android:id="@+id/text_sunrise"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="5dp"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:fontFamily="sans-serif-light"
             android:textColor="@color/white"
             app:layout_constraintTop_toBottomOf="@+id/details"
@@ -206,9 +206,9 @@
             android:id="@+id/text_sunset"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="5dp"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:fontFamily="sans-serif-light"
             android:textColor="@color/white"
             app:layout_constraintTop_toBottomOf="@+id/text_sunrise"
@@ -219,9 +219,9 @@
             android:id="@+id/text_windspeed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="5dp"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:fontFamily="sans-serif-light"
             android:textColor="@color/white"
             app:layout_constraintTop_toBottomOf="@+id/text_sunset"
@@ -232,9 +232,9 @@
             android:id="@+id/text_pressure"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="5dp"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:fontFamily="sans-serif-light"
             android:textColor="@color/white"
             app:layout_constraintTop_toBottomOf="@+id/text_windspeed"
@@ -245,9 +245,9 @@
             android:id="@+id/text_humidity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="5dp"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:fontFamily="sans-serif-light"
             android:textColor="@color/white"
             app:layout_constraintTop_toBottomOf="@+id/text_pressure"
