--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,4 +4,9 @@
         <item>@color/colordarkerlightBlue</item>
         <item>@color/colorlightBlue</item>
     </array>
+    <array name="forecasty">
+        <item>@color/colorforecastBlue</item>
+        <item>@color/colorlightBlue</item>
+        <item>@color/colorlightBlue</item>
+    </array>
 </resources>
