--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,11 +5,12 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorlightBlue">#93c9e7</color>
     <color name="colordarkerlightBlue">#2f87c2</color>
+    <color name="colorforecastBlue">#2f87c2</color>
     <color name="white">#FFFFFF</color>
-    <color name="transparent10">#1A000000</color>
-    <color name="transparent20">#33000000</color>
-    <color name="transparent30">#4D000000</color>
-    <color name="transparent40">#66000000</color>
-    <color name="transparent60">#99000000</color>
-    <color name="transparent80">#CC000000</color>
+    <color name="transparent10">#1AFFFFFF</color>
+    <color name="transparent20">#33FFFFFF</color>
+    <color name="transparent30">#4DFFFFFF</color>
+    <color name="transparent40">#66FFFFFF</color>
+    <color name="transparent60">#99FFFFFF</color>
+    <color name="transparent80">#CCFFFFFF</color>
 </resources>
