--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/colordarkerlightBlue"
-        android:endColor="@color/colorlightBlue"
+        android:startColor="@color/colorDarkerLightBlue"
+        android:endColor="@color/colorLightBlue"
         android:angle="270"/>
 </shape>
