--- a/app/src/main/res/layout/fragment_forecast.xml
+++ b/app/src/main/res/layout/fragment_forecast.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/background"
     tools:context=".ui.forecast.ForecastFragment">
 
     <TextView
@@ -19,7 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="5 day forecast" />
+        android:text="@string/forecastDays" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewParent"
@@ -44,7 +43,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text=" " />
+        android:text="@string/space" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
