--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.today.TodayFragment">
@@ -155,7 +155,7 @@
             android:fontFamily="sans-serif-light"
             android:textColor="@color/white"
             android:textSize="30sp"
-            android:text="Details"
+            android:text="@string/details"
             tools:ignore="MissingConstraints"/>
         <View
             android:layout_height="1dp"
