--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#51a4db</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
-    <color name="colorlightBlue">#93c9e7</color>
-    <color name="colordarkerlightBlue">#2f87c2</color>
-    <color name="colorforecastBlue">#2f87c2</color>
+    <color name="colorLightBlue">#93c9e7</color>
+    <color name="colorDarkerLightBlue">#2f87c2</color>
     <color name="white">#FFFFFF</color>
-    <color name="transparent10">#1AFFFFFF</color>
-    <color name="transparent20">#33FFFFFF</color>
     <color name="transparent30">#4DFFFFFF</color>
-    <color name="transparent40">#66FFFFFF</color>
-    <color name="transparent60">#99FFFFFF</color>
-    <color name="transparent80">#CCFFFFFF</color>
 </resources>
